--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,8 +5,7 @@ disabled_rules: # rule identifiers to exclude from running
   - line_length
   - todo
   - trailing_comma
-  - valid_docs
-  - variable_name
+  - identifier_name
 included:
   - Evolver/
 excluded: # paths to ignore during linting.
@@ -27,7 +26,7 @@ vertical_whitespace:
       severity: error
 trailing_newline:
       severity: error
-variable_name:
+identifier_name:
   min_length: # not possible to disable this partial rule, so set it to zero
     warning: 0
     error: 0
